--- a/assets/css/bookstore-Style.css
+++ b/assets/css/bookstore-Style.css
@@ -11,7 +11,7 @@ body{
 
 :root{
     --maincolor:#d14031;
-    height: 5000px !important; 
+    height: fit-content !important; 
 }
 
 @font-face {
