--- a/assets/css/authors.css
+++ b/assets/css/authors.css
@@ -3,13 +3,7 @@ input,textarea{
     width:100%;
     margin:10px 0;
 }
-.main-author-container{
-    background-color: #ededed;
-    height: 100%;
-    padding-right: 10%;
-    padding-left: 10%;
 
-}
 .container{
     width:40%;
     margin:auto;
@@ -18,19 +12,14 @@ input,textarea{
     text-transform: capitalize;
 }
 .add-course{
-    width: 100%;
+    width: 80%;
      margin: auto;
     margin-top:40px;
-    background-color: white;
-    border-radius: 10px;
     box-shadow:5px 5px 21px  #dcdcdc;
     text-align: center;
-    margin-bottom: 2%;
 }
 
-.table{
-    width: 80%;
-}
+
 th,td{
     width:200px
 }
@@ -40,9 +29,7 @@ th,td{
     color:red;
 }
 
-.btn-outline-dark{
-    
-}
+
 
 
 .services-img{
@@ -93,4 +80,27 @@ justify-content: center;
 .table-image{
     width: 50px;
     height: 50px;
+}
+
+@media (min-width:320px) and (max-width: 428px) {
+    .theTeam{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .teamM{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        min-width: fit-content;
+    }
+    
+    .container{
+        width: 100%;
+    }
+}
+@media (min-width:768px) and (max-width:1114px) {
+    .container{
+        width: 100%;
+    }
 }
