added some media query and fixed some styles

--- a/bookstore/assets/css/authors.css
+++ b/bookstore/assets/css/authors.css
@@ -31,11 +31,6 @@ input,textarea{
 }
 
 
-
-th,td{
-    width:200px
-}
-
 .delete{
     border:1px solid red;
     color:red;
@@ -119,6 +114,49 @@ justify-content: center;
     .container{
         width: 100%;
     }
+
+
+    .update-table-button{
+        margin: 0px;
+        font-size: 8px;
+        padding: 1px;
+        font-weight: 700;
+    }
+
+    .delete-table-button{
+        margin: 0px;
+        font-size: 8px ;
+        padding: 1px;
+        font-weight: 700 ;
+    }
+
+    th{
+        font-size: 9px !important;
+        padding: 0px 2.5px 0px 0px !important;
+        margin: 0px !important;
+        
+    }
+
+    td{
+        font-size: 9px !important;
+        padding: 0px !important;
+        margin: 0px !important;
+    }
+    
+        tr td:nth-child(5){
+        display: none;
+        padding: 0;
+        border-bottom-width:0px;
+    }
+
+         tr th:nth-child(5){
+        display: none;
+        padding: 0;
+        border-bottom-width:0px;
+    }
+
+
+
 }
 @media (min-width:768px) and (max-width:1114px) {
     .container{
